[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/Sound_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Theme/theme.tres" type="Theme" id=3]

[node name="main_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.1, 0.01, 0.0325, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 964.0
margin_bottom = 153.0
theme = ExtResource( 3 )
text = "Play"

[node name="Sandbox" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 964.0
margin_bottom = 221.0
theme = ExtResource( 3 )
text = "Sandbox mode"

[node name="controls" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 964.0
margin_bottom = 289.0
theme = ExtResource( 3 )
text = "Controls"

[node name="volume" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 964.0
margin_bottom = 357.0
theme = ExtResource( 3 )
text = "Volume"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 964.0
margin_bottom = 425.0
theme = ExtResource( 3 )
text = "Quit"

[node name="Sound_menu" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sandbox" to="." method="_on_Sandbox_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
